objects/Service_Construction_Requisition__c.object
<CustomObject>
    <description>For creating a Service Con Req (and Service PO) from within the Service Visit obj__c (R.L.) from within a Service Contract. This is unique from the ConReqs, i.e., Major, Minor, etc.</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Service_Visit__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Code</label>
        <referenceTo>Cost_Code__c</referenceTo>
        <relationshipLabel>Service Construction Requisitions</relationshipLabel>
        <relationshipName>Service_Construction_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>17</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Needed__c</fullName>
        <label>Date Needed</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <label>General Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Service Construction Requisitions</relationshipLabel>
        <relationshipName>Service_Construction_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serv_Contract__c</fullName>
        <formula>Service_Visit__r.Contract__r.ContractNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceVisit__c</fullName>
        <formula>Service_Visit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SVisit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_PO_Status__c</fullName>
        <description>This field will show related status field from Service PO</description>
        <formula>Text(Service_Purchase_Order__r.SCR_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will show related status field from Service PO</inlineHelpText>
        <label>Service PO Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_PO__c</fullName>
        <label>Service PO</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will point to Service purchase order</description>
        <label>Service Purchase Order</label>
        <referenceTo>Service_PO__c</referenceTo>
        <relationshipLabel>Service Construction Requisitions</relationshipLabel>
        <relationshipName>Service_Construction_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Visit_Date__c</fullName>
        <formula>Service_Visit__r.Visit_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Visit__c</fullName>
        <label>Service Visit</label>
        <referenceTo>SV__c</referenceTo>
        <relationshipLabel>Service Construction Requisitions</relationshipLabel>
        <relationshipName>Service_Construction_Requisitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ship_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Construction Requisitions (Ship To Account)</relationshipLabel>
        <relationshipName>Service_Construction_Requisitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Cost__c *  Quantity__c + ( Tax_Rate__c * Cost__c *  Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Billable</fullName>
                </value>
                <value>
                    <fullName>Charge Back</fullName>
                </value>
                <value>
                    <fullName>Warranty-Resi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Construction Requisitions</relationshipLabel>
        <relationshipName>Service_Construction_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Construction Requisitions</relationshipLabel>
        <relationshipName>Service_Construction_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Construction Requisition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Service_Visit__c</columns>
        <columns>Status__c</columns>
        <columns>Service_PO__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Total_Cost__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCR-{00000000}</displayFormat>
        <label>Service Construction Requisition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Construction Requisitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Quantity_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>Quantity__c &lt;1</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>The Quantity must be greater than 0.</errorMessage>
    </validationRules>
</CustomObject>